# Vk-chat-bot-DEF

./: Makefile  Procfile  README.md  config.yaml  database.yaml  pyproject.toml  requirements.txt  setup.cfg
chat_bot/: bot.py  keyboard.py  server.py
chat_bot/database/: database.py  database_processor.py
chat_bots/: __init__.py  bot.py  get_data.py  initiate_database.py  keyboard.py
chat_bots/database/: database_processor.py
chat_bots/script/: chat_bot.py
