[tool.poetry]
name = "vk_chat_bot_def"
version = "0.1.0"
description = ""
authors = ["Valerii-Denisov <klerk919191@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
vk-api = "^11.9.9"
psycopg2-binary = "^2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
